--- a/temlates/lk_signup.html
+++ b/temlates/lk_signup.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Join Labelketu | Signup</title>
     <style>
         body {
@@ -36,19 +37,10 @@
             cursor: pointer;
         }
     </style>
+
 </head>
 
 <body>
-    <div class="form-container">
-        <h2>Signup</h2>
-        <form method="POST">
-            <input type="text" name="username" placeholder="Username" required>
-            <input type="password" name="password" placeholder="Password" required>
-            <input type="date" name="dob" placeholder="Date of Birth" required>
-            <button type="submit">Signup</button>
-        </form>
-        <p>Already have an account? <a href="/login">Login here</a></p>
-    </div>
 
 </body>
 
