--- a/temlates/login.html
+++ b/temlates/login.html
@@ -2,6 +2,8 @@
 <html>
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Join Labelketu | Signup</title>
     <style>
         body {
@@ -42,9 +44,9 @@
         <form method="POST">
             <input type="text" name="username" placeholder="Username" required>
             <input type="password" name="password" placeholder="Password" required>
-            <button type="submit">login</button>
+            <button href="http://127.0.0.1:3000/boutique_site/temlates/index.html?serverWindowId=cc29c593-626b-44b0-afcd-288da2f45d9a" pe="submit ">login</button>
         </form>
-        <p>Forgot Password <a href="/login">Click here</a></p>
+        <p> <a href="/login ">forgot password</a></p>
     </div>
 </body>
 
